...
        android:icon="@drawable/ic_pcr"/>
    <item
        android:id="@+id/riskContacts"
        android:title="@string/bottom_menu_item_3"
        android:icon="@drawable/ic_riskcontacts"/>
    <item
        android:id="@+id/locationHistory"
        android:title="@string/bottom_menu_item_4"
        android:icon="@drawable/ic_location_history"/>
</menu>
